frame/support/test/tests/pallet_ui/step_012.stderr
error: Missing `#[pallet::interface]`
 --> $DIR/step_012.rs:2:1
  |
2 | mod pallet {
  | ^^^
